2nd attempt to fix image landscape on iphone

--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,24 @@ select[disabled] {
       margin-right: 0.1rem;
       margin-bottom: 0.1rem;
     }
+
+    /* .instruction-wrapper {
+      display: flex;
+      justify-content: center;
+      height: 60%;
+      width: 100%;
+      margin-top: 5rem;
+      position: absolute;
+      z-index: 2;
+    } */
+    
+    .instruction-image {
+      /* position: relative;
+      z-index: 100; */
+      height: 35vh;
+      width: 35vw;
+      opacity: 95%;
+    }
 }
 
 /*----------- CONFETTI ----------------*/
